--- a/db.properties
+++ b/db.properties
@@ -1,5 +1,3 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
-dburl = jdbc:derby:clinformaticadb;create=true
+#O caminho da (URL) deve ser aonde o seu bando foi criado(onde esta salvo)
+#The path of the (URL) should be where your flock was created (where it is saved)
+dburl = jdbc:derby:D:/eduar/Workspace/database/dbtest
