--- a/db.properties
+++ b/db.properties
@@ -1,3 +1,3 @@
 #O caminho da (URL) deve ser aonde o seu bando foi criado(onde esta salvo)
 #The path of the (URL) should be where your flock was created (where it is saved)
-dburl = jdbc:derby:D:\eduar\Workspace\database\dbtest
+dburl = jdbc:derby:D:/eduar/Workspace/database/dbtest
